objects/Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Percent_Dollar__c</fullName>
        <label>%/$</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prep_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prep Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Line_Maintenance_Value_Formula__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous_Line_Maintenance_Value_Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricebook_Entry_ID__c</fullName>
        <label>Pricebook Entry ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_APN_Number_tmp__c</fullName>
        <description>This is a TEMPORARY field for the Product APN.  Used by PS to extract data required for the PS RevPro data migration effort.</description>
        <formula>Product__r.APN_Number__c</formula>
        <label>Product APN Number TEMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_tmp__c</fullName>
        <description>This is a TEMPORARY field for the Product Family value.  Used by PS to extract data required for the PS RevPro data migration effort.</description>
        <formula>TEXT(Product__r.Family)</formula>
        <label>Product Family TEMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_POB_Type_tmp__c</fullName>
        <description>This is a TEMPORARY field for the Product POB Type. Used by PS to extract data required for the PS RevPro data migration effort.</description>
        <formula>Text(Product__r.POB_Type__c)</formula>
        <label>Product POB Type TEMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price_Precision__c</fullName>
        <formula>CASE( Product__r.Tier_Pricing_Decimal_Precision__c , &quot;2&quot;, &quot;2&quot;, &quot;4&quot;, &quot;4&quot;,&quot;6&quot;,&quot;6&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Price Precision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Siebel_ID__c</fullName>
        <label>Product Siebel ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Specific_Discount__c</fullName>
        <label>Product Specific Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <description>Reference in Process builder (&quot;AppFoundry Order Notification&quot;). Created by Liam Clifford for AppFoundry Team.</description>
        <formula>Product__r.Sub_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Product__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version1__c</fullName>
        <label>Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Version</label>
        <referenceTo>Product_Version__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Base Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_txt__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID_Formula__c</fullName>
        <formula>if( Quote_Product__r.Project_ID__c  !=&apos;&apos;, Quote_Product__r.Project_ID__c  ,If(Contract_Line_Item__r.Upd_Project_Id__c != &apos;&apos;, Contract_Line_Item__r.Upd_Project_Id__c , Project_ID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project_ID_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Change__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>What it does? Used to indicate Quantity change for Order Line Item.
Downstream Impact? -	Effects Revenue Forecasting. 
Which Department is Owner? -Finance.</description>
        <label>Quantity Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Credit__c</fullName>
        <formula>if(AND(BEGINS(Order__r.Name, &apos;600&apos;) , Len(Order__r.Name)==8) ,-BigMachines_Quantity__c,BigMachines_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing
Help Text: Used to store and bill for the number of gigabytes in usage data
Used to store and bill for the quantity of items in the Order Line</description>
        <inlineHelpText>Used to store and bill for the quantity of items in the Order Line (Quantity__c)</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Charge_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? To set the relationship between order line item and PureCloud quote product.
Downstream Impact? N/A
Which department is owner? IT</description>
        <label>Quote Charge Detail</label>
        <referenceTo>zqu__QuoteChargeDetail__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Product</label>
        <referenceTo>BigMachines__Quote_Product__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>zqu__QuoteRatePlanCharge__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Siebel_ID__c</fullName>
        <label>Quote Siebel ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Version__c</fullName>
        <label>Release Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Order__c</fullName>
        <formula>TEXT(Order__r.License_FYM_detail__c) == &apos;Rental Order&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rental Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevPro_Override_PS_Child_Opp_Ref__c</fullName>
        <description>What it does? Contains a reference to the PS PCR (Child Opportunity) if billing was done against the parent historically but needs to be linked to the child for RevPro
Downstream Impact?RevPro data conversion and auditing
Owner? IT</description>
        <label>RevPro Override PS Child Opp Ref</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevPro_POB_Override_Description__c</fullName>
        <description>What it does? Contains the details of the reason and previous POB Type value where the POB Type has been overridden (primarily for PS OLIs)
Downstream Impact?RevPro data conversion and auditing
Owner? IT</description>
        <label>RevPro POB Override Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RevPro_POB_Type_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does? Indicates that the default Product POB Type has been overridden manually/with a batch during cleanup (primarily related to PS billing to project type mismatches)
Downstream impact? RevPro data conversion/auditing
Owner? IT</description>
        <label>RevPro POB Type Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevPro_Quantity_Override__c</fullName>
        <description>What it does? Contains the order line quantity calculated override value if the POB Type has been overridden for PS OLIs changed from Fixed to T&amp;M for use with RevPro data conversion and auditing
Downstream Impact?RevPro data conversion and auditing
Owner? IT</description>
        <label>RevPro Quantity Override</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Classification__c</fullName>
        <description>Billing. Value Sent to Netsuite to classify Revenue for RevPro</description>
        <inlineHelpText>Billing. Value Sent to Netsuite to classify Revenue for RevPro</inlineHelpText>
        <label>Revenue Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Revenue_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revised_License_List_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revised License List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revised_Net_License_Value__c</fullName>
        <label>Revised Net License Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revised_Net_Number__c</fullName>
        <formula>Revised_Net_License_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revised Net (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SML_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SML Data</label>
        <referenceTo>SML_Data__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SML__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price_New__c</fullName>
        <formula>Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Price__c</fullName>
        <label>Segment Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Line_ID__c</fullName>
        <label>Service_Contract_Line_ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Stores whether invoice needs to be skipped or not.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Skip Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <formula>Order__r.Sold_To_Business_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Name__c</fullName>
        <label>Sold To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Names_Covered1_Formula__c</fullName>
        <formula>If(Contract_Line_Item__r.Upd_Solution_Name__c != &apos;&apos;,Contract_Line_Item__r.Upd_Solution_Name__c , If(    Quote_Product__r.Solution_Names_Covered1__c != &apos;&apos;,Quote_Product__r.Solution_Names_Covered1__c ,Solution_Names_Covered1__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution_Names_Covered1_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Names_Covered1__c</fullName>
        <label>Solution_Names_Covered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Names_Covered__c</fullName>
        <label>Solution Names Covered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>x</fullName>
                </value>
                <value>
                    <fullName>y</fullName>
                </value>
                <value>
                    <fullName>z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>needed for NS</description>
        <label>Component</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Support_Product__c.Product_Type__c</field>
                <operation>equals</operation>
                <value>Component</value>
            </filterItems>
            <filterItems>
                <field>Support_Product__c.Customer_Available__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Type_Formula__c</fullName>
        <formula>if( Quote_Product__r.Service_Contract_Line_ID__c !=&apos;&apos; , &apos;Renewal&apos;,&apos;New&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New/Renewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronization_ID__c</fullName>
        <label>Synchronization ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Notes__c</fullName>
        <label>System Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <description>Cloud Billing.flag to indicate that this Order Line Item requires taxation through a taxation service</description>
        <inlineHelpText>Cloud Billing.flag to indicate that this Order Line Item requires taxation through a taxation service</inlineHelpText>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SureTax Needed</fullName>
                </value>
                <value>
                    <fullName>Tax Complete</fullName>
                </value>
                <value>
                    <fullName>No Tax Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Applications__c</fullName>
        <label>Third Party Applications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>x</fullName>
                </value>
                <value>
                    <fullName>y</fullName>
                </value>
                <value>
                    <fullName>z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Partner_Fee__c</fullName>
        <label>Third Party Partner Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Party_Partners__c</fullName>
        <label>Third Party Partners</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Softpnone (italy)</fullName>
                </value>
                <value>
                    <fullName>SpeechStorm (Ireland)</fullName>
                </value>
                <value>
                    <fullName>Aria Solutions (Canada)</fullName>
                </value>
                <value>
                    <fullName>Blackchair (UK)</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent (France)</fullName>
                </value>
                <value>
                    <fullName>Glance Networks (USA)</fullName>
                </value>
                <value>
                    <fullName>Cyara Ltd (Australia)</fullName>
                </value>
                <value>
                    <fullName>Empirix (USA)</fullName>
                </value>
                <value>
                    <fullName>Aria Solutions</fullName>
                </value>
                <value>
                    <fullName>Product Support Solutions (PSS)</fullName>
                </value>
                <value>
                    <fullName>Performance Technology Partners (PTP)</fullName>
                </value>
                <value>
                    <fullName>BearPaw</fullName>
                </value>
                <value>
                    <fullName>Pointel</fullName>
                </value>
                <value>
                    <fullName>Nuance</fullName>
                </value>
                <value>
                    <fullName>Cothern Computer Systems (CCS)</fullName>
                </value>
                <value>
                    <fullName>Voxai</fullName>
                </value>
                <value>
                    <fullName>Blackchair</fullName>
                </value>
                <value>
                    <fullName>SpeechStorm</fullName>
                </value>
                <value>
                    <fullName>SoftPhone</fullName>
                </value>
                <value>
                    <fullName>Enigen</fullName>
                </value>
                <value>
                    <fullName>OpenMethods</fullName>
                </value>
                <value>
                    <fullName>Requstek</fullName>
                </value>
                <value>
                    <fullName>Servion</fullName>
                </value>
                <value>
                    <fullName>Anana</fullName>
                </value>
                <value>
                    <fullName>Miratech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <label>3rd Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Set_Period_In_Months__c</fullName>
        <description>For Cloud Monthly Billing Orders the number of months over which this order line spans</description>
        <inlineHelpText>For Cloud Monthly Billing Orders the number of months over which this order line spans</inlineHelpText>
        <label>Tier Set Period In Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tmp_Net_equal_Sales__c</fullName>
        <formula>Net_Unit_Price__c == Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tmp Net equal Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tokens__c</fullName>
        <description>What it Does? Stores number of token for order line 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Tokens</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_Play__c</fullName>
        <description>What it does?Store Top Play from Quote Product. 
Downstream Impact? Reporting. 
Which Department is Owner? IT</description>
        <formula>Quote_Product__r.Play__c</formula>
        <label>Top Play</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amt__c</fullName>
        <label>Total Discount Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Formula based off of Quantity multiplied by Sales Price.</description>
        <formula>if(Order__r.RecordType.Name = &apos;Cloud Monthly Billing Order&apos; &amp;&amp;  Order__r.Sales_Org__c != &apos;PureCloud&apos;, 
FLOOR((Sales_Price__c * BigMachines_Quantity__c)*100)/100, 
Sales_Price__c * BigMachines_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula based off of Quantity multiplied by Sales Price.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transation_Count__c</fullName>
        <description>If applicable, the number of transactions yielding the Quantity. For example 10 phone calls yielded the total of 1000 quantity of minutes. This is an informational field only and does not factor into the price.</description>
        <inlineHelpText>If applicable, the number of transactions yielding the Quantity. For example 10 phone calls yielded the total of 1000 quantity of minutes. This is an informational field only and does not factor into the price.</inlineHelpText>
        <label>Transation Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_List_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unit List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Partner_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unit Partner Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year1_Maintenance_Due__c</fullName>
        <label>Year1 Maintenance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year2_CareRatePercent__c</fullName>
        <label>Year2 CareRatePercent</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year2_Maintenance_Due__c</fullName>
        <label>Year2 Maintenance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year3_CareRatePercent__c</fullName>
        <label>Year3 CareRatePercent</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year3_Maintenance_Due__c</fullName>
        <label>Year3 Maintenance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year4_CareRatePercent__c</fullName>
        <label>Year4 CareRatePercent</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isPSContractOrSubscriptionProduct__c</fullName>
        <description>What it does? Indicates at the order line level if the associated Product is a PS Contract or PS Subscription item
Downstream Impact? Used for PS Order processing and CAS/Subscription notifications
Owner? PS/IT</description>
        <formula>Product__r.PS_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is PS Contract or Subscription Product ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPureConnectPrem__c</fullName>
        <formula>INCLUDES(Product__r.OfferingType__c, &quot;PureConnect On Premise&quot;) &amp;&amp; 
((NOT CONTAINS(TEXT(Product__r.Type__c), &quot;Care&quot;) &amp;&amp; NOT CONTAINS(TEXT(Product__r.Type__c), &quot;PS&quot;))|| ISBLANK(TEXT(Product__r.Type__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isPureConnectPrem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPureEngagePrem__c</fullName>
        <formula>INCLUDES(Product__r.OfferingType__c, &quot;PureEngage On Premise&quot;) 
&amp;&amp; 
( 
( 
NOT CONTAINS(TEXT(Product__r.Type__c), &quot;Care&quot;) 
&amp;&amp; 
NOT CONTAINS(TEXT(Product__r.Type__c), &quot;PS&quot;) 
) 
|| 
ISBLANK(TEXT(Product__r.Type__c)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isPureEngagePrem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVersionUntested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVersionUntested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>temp1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>temp1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zzProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzProduct</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>zzOrder Line Items</relationshipLabel>
        <relationshipName>zzOrder_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sold_To_Name__c</columns>
        <columns>End_User_Name__c</columns>
        <columns>NAME</columns>
        <columns>APN_Number__c</columns>
        <columns>Material_Description__c</columns>
        <columns>BigMachines_Quantity__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_User_Name__c</field>
            <operation>equals</operation>
            <value>AirBnb</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Sold_To_Name__c</columns>
        <columns>End_User_Name__c</columns>
        <columns>NAME</columns>
        <columns>APN_Number__c</columns>
        <columns>Material_Description__c</columns>
        <columns>BigMachines_Quantity__c</columns>
        <columns>Product_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APN_Number__c</field>
            <operation>equals</operation>
            <value>CS-012-NV-AR04</value>
        </filters>
        <label>AA Customer order history with line item</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Maint_changes</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Year__c</columns>
        <columns>Maintenance_Start_Date__c</columns>
        <columns>Maintenance_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order__c</field>
            <operation>contains</operation>
            <value>Order 2018-6432394</value>
        </filters>
        <label>Maint changes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Telco_Memo</fullName>
        <columns>NAME</columns>
        <columns>Memo__c</columns>
        <columns>Maintenance_Start_Date__c</columns>
        <columns>Maintenance_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Memo__c</field>
            <operation>contains</operation>
            <value>Telco</value>
        </filters>
        <label>Telco Memo</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_View</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Year__c</columns>
        <columns>Base_Package__c</columns>
        <columns>Sales_Price__c</columns>
        <columns>Ext_Net_Price__c</columns>
        <columns>Net_Unit_Price__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>List_Price__c</columns>
        <columns>Ext_List__c</columns>
        <columns>BigMachines_Quantity__c</columns>
        <columns>Quantity__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order__c</columns>
        <columns>Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order__c</field>
            <operation>contains</operation>
            <value>Order 2019-6543680 - progress</value>
        </filters>
        <filters>
            <field>Package_Type__c</field>
            <operation>contains</operation>
            <value>base</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Line_Item__c.Default</value>
        </filters>
        <label>Test View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Order Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <recordTypes>
        <fullName>Cloud_Billing_Master_Order_Line</fullName>
        <active>true</active>
        <description>For order line items which are under cloud billing master order</description>
        <label>Cloud Billing Master Order Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cloud_Monthly_Billing_Order_Line</fullName>
        <active>true</active>
        <label>Cloud Monthly Billing Order Line</label>
    </recordTypes>
</CustomObject>